tests/baselines/reference/getJavaScriptSyntacticDiagnostics9.baseline
//// [/tests/cases/fourslash/getJavaScriptSyntacticDiagnostics9.ts] ////

// === Syntax Diagnostics ===
Syntactic Diagnostics:
/tests/cases/fourslash/a.js(1,1): error TS8009: The 'public' modifier can only be used in TypeScript files.


==== /tests/cases/fourslash/a.js (1 errors) ====
    public function F() { }
    ~~~~~~
!!! error TS8009: The 'public' modifier can only be used in TypeScript files.